# V2DL3

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  GenerateEventDisplayDL3File.ipynb  GenerateVEGASDL3File.ipynb  LICENSE  README.md  README_vegas.md  SpectrumPlotter.ipynb  VERITAS_skymap.ipynb  ViewMAGICDL3.ipynb  download_data_for_tests.sh  ed_runlist.txt  environment-eventdisplay.yml  environment-vegas.yml  environment.yml  make_veritas_obs_hdu_index.py  pyproject.toml  runlist.txt  runlist_med.txt  setup.py  vegas_runlister.py
.github/workflows/: CI.yml  pypi.yml  v2dl3-codeChecking.yml  v2dl3-eventdisplay-packaging.yml  v2dl3-eventdisplay.yml  v2dl3-vegas.yml  v2dl3ED.yml
VEGAS/: 54809medPoint_s6.fits  59523medPoint_s6.fits  87658_DL3.fits  CrabDL3medPointRBM_s6.fits  CrabDL3medPoint_s6.fits  CrabDL3softPoint_s6.fits
VEGAS/DL3/: 54809_DL3.fits  57993_DL3.fits  58456_DL3.fits  59523_DL3.fits
VEGAS/DL3med/: 54809.med.ED.050.St5_Stereo.fits  57993.med.ED.050.St5_Stereo.fits
VEGAS/DL3soft/: 54809.soft.ED.050.St5_Stereo.fits  54809.soft.ED.All.St5_Stereo.fits  57993.soft.ED.050.St5_Stereo.fits  59523.soft.ED.All.St5_Stereo.fits
notebooks/: GenerateVEGASDL3File.ipynb  README.md  SpectrumPlotter.ipynb  Testing Full Enclosure DL3 File.ipynb  VERITAS_skymap.ipynb  VERITAS_spectrum.ipynb  environment.yml  gammapy_util.py  runlist_soft.txt
notebooks/eventdisplay-testing/: README.md  Testing_IRF_interpolation.ipynb  compareFitsFiles.py  eventDisplay_test_irf_interpolation.ipynb
notebooks/full_enclosure/: 89395.fits
notebooks/point_like/: 89395.fits
pyV2DL3/: EventClass.py  VtsDataSource.py  addHDUClassKeyword.py  constant.py  fillEVENTS.py  fillGTI.py  fillRESPONSE.py  fill_response.py  gammapy_util.py  genHDUList.py  generateObsHduIndex.py  load_vegas.py  parseSt6RunList.py  root_lib_util.py  util.py  vtsDataSource.py
pyV2DL3/eventdisplay/: DBFitsFile.py  EventDisplayDataSource.py  IrfExtractor.py  IrfInterpolator.py  README.md  XIrf.py  convertROOT2fits.py  eventDisplayDataSource.py  fillEVENTS.py  fillEVENTS_not_safe.py  fillRESPONSE.py  fillRESPONSE_not_safe.py  irf_extractor.py  load_eventDisplay.py  splitRUNS.py  util.py
pyV2DL3/script/: compareFitsFiles.py  eventdisplay_query_runparameters.py  generateObsHduIndex.py  generate_index_file.py  st5ToDL3.py  v2dl3-eventdisplay.py  v2dl3.py  v2dl3_for_Eventdisplay.py  v2dl3_for_vegas.py  v2dl3_qsub.py
pyV2DL3/tests/: test_IrfExtractor.py  test_addHDUClassKeyword.py  test_fillRESPONSE.py  test_generateObsHduIndex.py  test_irf_extractor.py  test_util.py
pyV2DL3/vegas/: EffectiveAreaFile.py  EventClass.py  VegasDataSource.py  fillEVENTS_not_safe.py  fillRESPONSE_not_safe.py  irfloader.py  load_vegas.py  parseSt6RunList.py  root_lib_util.py  util.py  vegasDataSource.py
utils/: compare_fits_dirs.sh  download_Eventdisplay_test_data.sh  prepare_Eventdisplay_CI.sh  query_anasum_runparameters.py  v2dl3-vegas-docker-CI.sh  vegas_docker_test_runs.sh  vegas_runlister.py
utils/v2dl3-eventdisplay-docker/: Dockerfile  README.md
utils/v2dl3-vegas-docker/: .dockerignore  Dockerfile_vegas_ci  Dockerfile_vegas_v2dl3_arm64  Dockerfile_vegas_v2dl3_x64  README.md  (+1 more)
(+15 files in other folders)
