[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools", "setuptools-scm[toml]" ]

[project]
name = "v2dl3"
description = "VERITAS (VEGAS and Eventdisplay) to DL3 Converter"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = "~=3.8"
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dynamic = [ "version" ]
dependencies = [
  "astropy",
  "click",
  "numpy",
  "pkgconfig",
  "pyyaml",
  "scikit-learn",
  "scipy",
  "tqdm",
  "uproot",
]

optional-dependencies."tests" = [
  "pytest",
  "pytest-cov",
]
urls."bug tracker" = "https://github.com/VERITAS-Observatory/V2DL3/issues"
urls."documentation" = "https://github.com/VERITAS-Observatory/V2DL3/"
urls."repository" = "https://github.com/VERITAS-Observatory/V2DL3/"
scripts.v2dl3-compareFitsFiles = "pyV2DL3.script.compareFitsFiles:cli"
scripts.v2dl3-eventdisplay = "pyV2DL3.script.v2dl3_for_Eventdisplay:cli"
scripts.v2dl3-eventdisplay-query-runparameters = "pyV2DL3.script.eventdisplay_query_runparameters:main"
scripts.v2dl3-generate-index-file = "pyV2DL3.script.generate_index_file:cli"
scripts.v2dl3-vegas = "pyV2DL3.script.v2dl3_for_vegas:cli"

[tool.setuptools]
packages = [
  "pyV2DL3",
  "pyV2DL3.eventdisplay",
  "pyV2DL3.script",
  "pyV2DL3.vegas",
  "pyV2DL3._dev_version",
  "pyV2DL3.tests",
]

[tool.setuptools_scm]
write_to = "pyV2DL3/_version.py"
